More Games, updated artists
More Games, updated artists

--- a/artist3.html
+++ b/artist3.html
@@ -100,6 +100,7 @@
             <p><b>Emma Frick's Website</b></p>
             <hr>
             <h3>I created another website during the time that I created this one with a two other people for someone else in our school. In fact, we created two of them for two different people for their art class. This one I will show you about on this page was for Emma Frick. If you would like to visit the site that we made for her you can go <a href="http://emmafrickart.github.io">[here]</a></h3>
+			<img src="images/emmafrick.png" alt="emmaSite" class="img-responsive">
         </div>
     </div>
     <div class="footer">
