--- a/games.html
+++ b/games.html
@@ -100,17 +100,31 @@
             <p>Programming Games</p>
             <hr>
             <h3>Using HTML5, I created a short adventure role palying game. In this game you are presented with a situation and muist repsond to it by choosing bewteen several different options. I did not spend that much time creatiung it, so it is very short and may not make much sense. You can find this game <a href="http://share.pencilcode.net/home/jy0xt-mulld-Adventuree">[here]</a></h3>
-            <img src="images/html5Game.jpg" alt="html5Game" class="img-responsive">
+            <img src="images/html5Game.png" alt="html5Game" class="img-responsive">
             <h3>You can find another game similar to this one but in Python in the "Courses Section" section under "Advanced Computer Programming", that has many more choices.</h3>
-            <hr>
-            <h3>Here is a simple animation that I created using Scratch. In order to use it you can use the arrows keys to walk around and jump. For some reason I included a timer, since I had no idea what i was going to do with it when I made it in my sophomore year of high school. 
-            <center>
+			</div>
+			<div class="well">
+            <h3>Here is a simple animation that I created using Scratch. In order to use it you can use the arrows keys to walk around and jump. For some reason I included a timer, since I had no idea what i was going to do with it when I made it in my sophomore year of high school.
                 <div class="video-container">
+            <center>
                     <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/22465427/?autostart=false" frameborder="0" allowfullscreen></iframe>
-			<div id="game1">
-            </div>
+					</div>
 			</center>
-            <hr>
+			            <h3>Here are some more Scratch Games found from their website <a href="https://scratch.mit.edu/">[here]</a></h3>
+						<h3>This one is called "Hill Climb Racing v0.10b" and made by the user "griffpatch". It can be found <a href="https://scratch.mit.edu/projects/56667360/">[here]</a></h3>
+						            <center>
+                <div class="video-container">
+                    <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/56667360/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    
+					</div>
+						<h3>This one is called "World and Tanks v1.21" and made by the user "WO997". It can be found <a href="https://scratch.mit.edu/projects/58287862/">[here]</a></h3>
+						            <center>
+                <div class="video-container">
+                          <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/58287862/?autostart=false" frameborder="0" allowfullscreen></iframe>
+					</div>
+			</center>
+			</div>
+			<div class="well">
 			<h3>Here is a game that I did not create, but I thought it was a helpful website for making webpages and it seems like a pretty cool game.. I found it <a href="http://www.htmlgoodies.com/beyond/webmaster/projects/making-your-website-fun-with-games.html">[here]</a> if you would like to check out the original code for the game.</h3>
             <p> Asking question <span id="NumberAsked">1</span> of 10:
 
