--- a/index.html
+++ b/index.html
@@ -103,11 +103,17 @@
             <!--<span style="display:inline-block; width: 40px;"></span> -->
             <h3><font size="12" face="'Bangers', cursive">Hello!</font> and welcome to my website! Under the "Games" category, you will find programs and games I have created using different programming languages. Under "School" you will find a list of different courses that I have taken in high school, each showing off different assignments that I had during the course, such as documents and presentations. In the "Music", "Movies", "Books", and " Television Shows" categories, you will find my favorites under the respective subject, each having some kind of impact my life growing up. In the last category titled "Artist Websites" you will find two different other websites that me and a group of other students from my high school have created for other students for their art class. I hope that you find this site to be useful in finding out about my personality. </h3>
             <h3>I created this site for a final project for a Coding for Web Design Course that I had in high school, which I created at the same time as the other artist websites. If you have any kind comments about my website or just about me, feel free to contact me by clicking on "Contact Me" at the bottom of each page.</h3>
+			</div>
+			<div class="well">
             <h3>Anyway....</h3>
             <h3>Enjoy this awsome snowman and present I made using javascript!</h3>
             <canvas id="myCanvas" width="600" height="850">
                 Your browser does not support the HTML5 canvas tag.</canvas>
             <div class="snowman">
+			<center><img src="images/anIcon.png" width="400" height="100" alt="SnowMans" usemap="#snowMap" class="img-responsive"></center>
+			<map name="snowMap">
+			  <area shape="rect" coords="0,0,600,850" href="snowman.html" alt="SnowMan" >
+			</map>
                 <script>
                     var c = document.getElementById("myCanvas");
                     var ctx = c.getContext("2d");
