--- a/school2.html
+++ b/school2.html
@@ -115,19 +115,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/pyAdv1.jpg" alt="pyGame1">
+      <img src="images/pyAdv1.png" alt="pyGame1">
     </div>
 
     <div class="item">
-      <img src="images/pyAdv2.jpg" alt="pyGame2">
+      <img src="images/pyAdv2.png" alt="pyGame2">
     </div>
 
     <div class="item">
-      <img src="images/pyAdv3.jpg" alt="pyGame3">
+      <img src="images/pyAdv3.png" alt="pyGame3">
     </div>
 
     <div class="item">
-      <img src="images/pyAdv4.jpg" alt="pyGame4">
+      <img src="images/pyAdv4.png" alt="pyGame4">
     </div>
   </div>
 
