--- a/music1.html
+++ b/music1.html
@@ -18,84 +18,82 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="50">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span> Home </a>
+            </li>
+            <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="school1.html"> Political Government </a>
+                    </li>
+                    <li><a href="school2.html"> Advanced Computer Programming </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="index.html"><span class="glyphicon glyphicon-music"></span> Music <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="music1.html"> Daft Punk </a>
+                    </li>
+                    <li><a href="music2.html"> Phoenix </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movies <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="movie1.html"> The Dark Knight </a>
+                    </li>
+                    <li><a href="movie2.html"> Star Wars </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-book"></span> Books <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="book1.html"> Fast Food Nation </a>
+                    </li>
+                    <li><a href="book2.html"> The City of Ember </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="tv1.html"> Rick and Morty </a>
+                    </li>
+                    <li><a href="tv2.html"> Community </a>
+                    </li>
+                    <li><a href="tv3.html"> Arrested Development </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="artist3.html"> Emma Frick </a>
+                    </li>
+                    <li><a href="artist4.html"> Annie O'Dea </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        </div>
+        </div>
+    </nav>
     <div class="header">
-	</div>
-	<div class="container">
-		<div class="headerText">
-		<a href="index.html" >David Muller</a>
-		<br>
-		<h1>Music</h1> 
-		</div>
-	</div>
+    </div>
+    <div class="container">
+        <div class="headerText">
+            <a href="index.html">David Muller</a>
+            <br>
+            <h1>Music</h1>
+        </div>
+    </div>
     <div class="jumbotron">
         <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" height="150px">
         </center>
     </div>
     <div class="container">
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div>
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span> Home </a>
-                        </li>
-                        <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="school1.html"> Political Government </a>
-                                </li>
-                                <li><a href="school2.html"> Advanced Computer Programing </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="index.html"><span class="glyphicon glyphicon-music"></span> Music <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="music1.html"> Daft Punk </a>
-                                </li>
-                                <li><a href="music2.html"> Phoenix </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movies <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="movie1.html"> The Dark Knight </a>
-                                </li>
-                                <li><a href="movie2.html"> Star Wars </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-book"></span> Books <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="book1.html"> Fast Food Nation </a>
-                                </li>
-                                <li><a href="book2.html"> The City of Ember </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="tv1.html"> Rick and Morty </a>
-                                </li>
-                                <li><a href="tv2.html"> Community </a>
-                                </li>
-                                <li><a href="tv3.html"> Arrested Development </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="artist3.html"> Emma Frick </a>
-                                </li>
-                                <li><a href="artist4.html"> Annie O'Dea </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <div class="well">
             <p>Daft Punk</p>
             <hr>
@@ -104,8 +102,7 @@
 			<br>
             <p id="source"><i><a href="https://en.wikipedia.org/wiki/Daft_Punk">(Source: Wikipedia)</i></a></p>
             </p>
-            <hr>
-            <h3>More Text</h3>
+            <h3>Daft Punk takes popular genres of music and mixes them with what people want to hear, but didn't know that they wanted to hear it.</h3>
         </div>
 
     </div>
