Fixed spelling mistake on artist4

--- a/artist4.html
+++ b/artist4.html
@@ -86,7 +86,7 @@
         <div class="headerText">
             <a href="index.html">David Muller</a>
             <br>
-            <h1>Artist Websites<</h1>
+            <h1>Artist Websites</h1>
         </div>
     </div>
     <div class="jumbotron">
