Spelling mistakes on artist4

--- a/artist4.html
+++ b/artist4.html
@@ -97,8 +97,8 @@
         <div class="well">
             <p><b>Annie O'Dea's Website</b></p>
             <hr>
-             <h3>I created another website during the time that I created this one with a two other people for someone else in our school. In fact, we created two of them for two different people for their art class. This one I will show you about on this page was for Annie O'Dea. If you would like to visit the site that we made for her you can go <a href="http://annieodeaart.github.io">[here]</a></h3>
-			 <h3>For this site, the artist wanted to show off her art work in a collage type of fashoin. When you hover over an image, it would come to the front over an overlapping pictures, and be enlarged. Doing this would also show the titel and desciption of the image.</h3>
+             <h3>I created another website during the time that I created this one with a two other people for someone else in our school. In fact, we created two of them for two different people for their art class. This one I will show you about on this page was for Annie O'Dea. If you would like to visit the site that we made for her you can go <a href="http://annieodeaart.github.io">[here]</a></h3> 
+             <h3>For this site, the artist wanted to show off her artwork in a collage type of fashion. When you hover over an image, it would come to the front over an overlapping pictures, and be enlarged. Doing this would also show the title and description of the image.</h3>
 			 <img src="images/annieodea.png" alt="annieSite" class="img-responsive">
         </div>
     </div>
